compiler/lyra/src/test/resources/semantic_errors/ImplementSelf.ly
interface A extends A {
    def m(x : Int) : Int;
}

class Application {
    def main { }
}